RESOLVED FIXED273245
REGRESSION(274201@main): Error embedding AT-SPI socket: GDBus.Error:org.freedesktop.DBus.Error.NameHasNoOwner: org.freedesktop.DBus.Error.NameHasNoOwner
https://bugs.webkit.org/show_bug.cgi?id=273245
Summary REGRESSION(274201@main): Error embedding AT-SPI socket: GDBus.Error:org.freed...
Michael Catanzaro
Reported 2024-04-25 05:49:06 PDT
With Epiphany Tech Preview using WebKitGTK 2.44.1: * Load about:overview in Epiphany * Load https://example.com You'll see this warning: (epiphany:2): Gtk-WARNING **: 07:46:40.187: Error embedding AT-SPI socket: GDBus.Error:org.freedesktop.DBus.Error.NameHasNoOwner: org.freedesktop.DBus.Error.NameHasNoOwner Sometimes, but not always, simply opening a new tab is sufficient to trigger the warning to print. I have a huge spam of such warnings in my terminal. Georges says it's a GTK bug, https://gitlab.gnome.org/GNOME/gtk/-/issues/6581
Attachments
Michael Catanzaro
Comment 1 2024-04-25 06:27:17 PDT
Michael Catanzaro
Comment 2 2024-04-25 07:00:35 PDT
New finding: the warning occurs only under flatpak, and it seems to block a11y from working (at least, orca cannot read my web views)
Michael Catanzaro
Comment 3 2024-04-25 07:04:39 PDT
Notably, the name we're trying to own looks like this: /org/a11y/webkit/accessible/f0d99090_bf5d_4e81_af25_9c4d1eff7583 Matthias suggests xdg-dbus-proxy might be blocking us from owning the name. We might only have permission to own names that match the app ID? (However, it's strange that we don't see a separate error message for failing to own the name!)
Michael Catanzaro
Comment 4 2024-04-25 07:15:03 PDT
Matthias says no: there are no policies for ownership of object paths, only for bus names.
Adrian Perez
Comment 5 2024-04-25 07:18:08 PDT
While discussing in the WebKitGTK chat room we realized that the issue seems to pop only when running e.g. an Epiphany Flatpak. It should be easy enough restricting connections to the a11y socket iff !WTF::isInsideFlatpak() instead of a full revert. I am testing a patch in this direction and will submit an alternative PR momentarily.
Michael Catanzaro
Comment 6 2024-04-25 07:20:00 PDT
The actual bus name looks like ":1.261" but that seems expected.
Adrian Perez
Comment 7 2024-04-25 07:35:09 PDT
Michael Catanzaro
Comment 8 2024-04-25 08:05:34 PDT
So poking around a bit more, I found AccessibilityAtspi::registerObject in AccessibilityAtspi.cpp is where the plug ID is actually coming from. And it's ignoring all D-Bus errors. ;)
EWS
Comment 9 2024-04-26 12:32:09 PDT
Committed 278054@main (bfbc2e6fa7ad): <https://commits.webkit.org/278054@main> Reviewed commits have been landed. Closing PR #27741 and removing active labels.
Adrian Perez
Comment 10 2024-04-26 14:27:02 PDT
Reopening to do the actual fix later on =)
Georges Basile Stavracas Neto
Comment 11 2024-08-15 08:05:27 PDT
EWS
Comment 12 2024-10-09 08:19:01 PDT
Committed 284894@main (3672c423722b): <https://commits.webkit.org/284894@main> Reviewed commits have been landed. Closing PR #32247 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.