Source/WebKit/Shared/WebProcessCreationParameters.h
@@ -267,6 +267,7 @@ struct WebProcessCreationParameters {
 
 #if USE(ATSPI)
     String accessibilityBusAddress;
+    String accessibilityBusName;
 #endif
 
     String timeZoneOverride;
