Source/WebKit/UIProcess/Launcher/ProcessLauncher.h
@@ -56,6 +56,10 @@ OBJC_CLASS BERenderingProcess;
 #include <wtf/glib/GSocketMonitor.h>
 #endif
 
+#if ENABLE(BUBBLEWRAP_SANDBOX)
+#include "glib/XDGDBusProxy.h"
+#endif
+
 namespace WebKit {
 
 #if PLATFORM(GTK) || PLATFORM(WPE)
@@ -64,6 +68,40 @@ enum class SandboxPermission {
     ReadWrite,
 };
 #endif
+
+enum class ProcessLaunchType {
+    Web,
+    Network,
+#if ENABLE(GPU_PROCESS)
+    GPU,
+#endif
+#if ENABLE(BUBBLEWRAP_SANDBOX)
+    DBusProxy,
+#endif
+#if ENABLE(MODEL_PROCESS)
+    Model,
+#endif
+};
+
+struct ProcessLaunchOptions {
+    WebCore::ProcessIdentifier processIdentifier;
+    ProcessLaunchType processType { ProcessLaunchType::Web };
+    HashMap<String, String> extraInitializationData { };
+    bool nonValidInjectedCodeAllowed { false };
+    bool shouldMakeProcessLaunchFailForTesting { false };
+
+#if PLATFORM(GTK) || PLATFORM(WPE)
+    HashMap<CString, SandboxPermission> extraSandboxPaths { };
+#if ENABLE(DEVELOPER_MODE)
+    String processCmdPrefix { };
+#endif
+#endif
+
+#if PLATFORM(PLAYSTATION)
+    String processPath { };
+    int32_t userId { -1 };
+#endif
+};
 
 #if USE(EXTENSIONKIT)
 class LaunchGrant : public ThreadSafeRefCounted<LaunchGrant> {
@@ -80,6 +118,9 @@ private:
 
 class ProcessLauncher : public ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<ProcessLauncher> {
 public:
+    using ProcessType = ProcessLaunchType;
+    using LaunchOptions = ProcessLaunchOptions;
+
     class Client {
     public:
         virtual ~Client() { }
@@ -99,40 +140,6 @@ public:
         virtual uint32_t ptrCountWithoutThreadCheck() const = 0;
         virtual void incrementPtrCount() const = 0;
         virtual void decrementPtrCount() const = 0;
-    };
-    
-    enum class ProcessType {
-        Web,
-        Network,
-#if ENABLE(GPU_PROCESS)
-        GPU,
-#endif
-#if ENABLE(BUBBLEWRAP_SANDBOX)
-        DBusProxy,
-#endif
-#if ENABLE(MODEL_PROCESS)
-        Model,
-#endif
-    };
-
-    struct LaunchOptions {
-        WebCore::ProcessIdentifier processIdentifier;
-        ProcessType processType { ProcessType::Web };
-        HashMap<String, String> extraInitializationData { };
-        bool nonValidInjectedCodeAllowed { false };
-        bool shouldMakeProcessLaunchFailForTesting { false };
-
-#if PLATFORM(GTK) || PLATFORM(WPE)
-        HashMap<CString, SandboxPermission> extraSandboxPaths { };
-#if ENABLE(DEVELOPER_MODE)
-        String processCmdPrefix { };
-#endif
-#endif
-
-#if PLATFORM(PLAYSTATION)
-        String processPath { };
-        int32_t userId { -1 };
-#endif
     };
 
     static Ref<ProcessLauncher> create(Client* client, LaunchOptions&& launchOptions)
@@ -190,6 +197,10 @@ private:
     const LaunchOptions m_launchOptions;
     bool m_isLaunching { true };
     ProcessID m_processID { 0 };
+
+#if ENABLE(BUBBLEWRAP_SANDBOX)
+    XDGDBusProxy m_dbusProxy;
+#endif
 
 #if USE(GLIB) && OS(LINUX)
     GSocketMonitor m_socketMonitor;
